jwt, kafka - terminology, redis usage, schedulers